Bug 97899 - FILEOPEN: Cannot format some numbering of DOCX unless with the text (numbers fixed in Bug 77404)
Summary: FILEOPEN: Cannot format some numbering of DOCX unless with the text (numbers ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low minor
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.4.0 target:7.3.0.0.beta2
Keywords: bibisected, filter:docx
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists DOCX-Lists-Direct-Formatting
  Show dependency treegraph
 
Reported: 2016-02-16 12:24 UTC by Andrew
Modified: 2022-01-25 11:56 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple numbering format (10.04 KB, application/vnd.oasis.opendocument.text)
2016-02-16 12:24 UTC, Andrew
Details
Text document from MS Word (21.66 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-03-17 07:21 UTC, Andrew
Details
MS Word screenshot (131.22 KB, image/jpeg)
2016-03-17 07:21 UTC, Andrew
Details
TestMaker screenshot (161.22 KB, image/jpeg)
2016-03-17 07:22 UTC, Andrew
Details
OOo screenshot (163.89 KB, image/jpeg)
2016-03-17 07:24 UTC, Andrew
Details
WPS Writer screenshot (143.99 KB, image/jpeg)
2016-03-17 07:24 UTC, Andrew
Details
LinreOffice 5 screenshot (150.28 KB, image/jpeg)
2016-03-17 07:25 UTC, Andrew
Details
LibreOffice 4 screenshot (148.63 KB, image/jpeg)
2016-03-17 07:25 UTC, Andrew
Details
Example of numbering size (20.22 KB, application/vnd.oasis.opendocument.text)
2016-03-17 07:37 UTC, Andrew
Details
LibreOffice screenshot (265.54 KB, image/jpeg)
2016-03-17 07:37 UTC, Andrew
Details
screen shot showing LibreOffice daily20160525 and Word2010 (139.64 KB, image/png)
2016-05-28 15:36 UTC, Cor Nouws
Details
Clean file from Word 2010 with ~ same contents (16.38 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2016-05-30 20:30 UTC, Cor Nouws
Details
Test document compared MSO LO3.5 LO3.6 LO4.2 LO6.4+ (164.25 KB, image/png)
2019-09-06 09:52 UTC, Timur
Details
Screenshot of the example document in LO 6.4 and Word (95.55 KB, image/png)
2019-09-17 12:34 UTC, Gabor Kelemen (Collabora)
Details
Test document compared MSO 2013 LO 6.4 (65.59 KB, image/png)
2020-01-29 14:46 UTC, Timur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew 2016-02-16 12:24:56 UTC
Created attachment 122680 [details]
Simple numbering format

When I use numbering, I can not format numbers - only can format in with all text.
If I place cursor before number field and try to change font property, this have no effect.
When I try to do it with OOo or MS Word in same file and save it in .ODT or .DOCX or .DOC, I now can change font property in LO.
Numbering problem seems extremely hard with RTF format.
Comment 1 Andrew 2016-02-16 12:49:34 UTC
In 4.4.7.2. it works more or less tolerated. But still not as expected.
Comment 2 Cor Nouws 2016-02-16 15:11:18 UTC
Hi Andrew,

Thanks for filing, however formatting of numbering and bullets is done with character styles. See the list at the tab Options for Bullets and numbering (styles).

You may want to consider to ask support from our community with these questions too. See http://www.libreoffice.org/get-help/community-support/

regards,
Cor
Comment 3 Andrew 2016-02-17 05:36:31 UTC Comment hidden (no-value)
Comment 4 Andrew 2016-02-17 07:19:52 UTC
After more research, I think I understand the problem.
Elements of the list may have or may not have styles. If there is no style, the format is changed in conjunction with the text. If the style is, according to the style.
Problems until a few:
1. It is to be seen clearly, if you put the mouse over the number. I do not see right style and the right font.
2. When working with RTF, the document contains many styles. Just now, I was not able to apply the formatting for the first number in the list, with unknown reason.
3. In the document, which must be one "list", "Lists" is a lot, and it is unclear how to consolidate them into one. List item can erraticaly jump from one list to another when editing document.
The most offensive, that the "MS Word" works fine with this nonsense.
Comment 5 Andrew 2016-03-17 07:21:10 UTC
Created attachment 123645 [details]
Text document from MS Word

Numbering in LibreOffice working completely unusable and it is completely incompatible with MS Word. I present some attachments that illustrating just only one of problems.
Comment 6 Andrew 2016-03-17 07:21:52 UTC Comment hidden (obsolete)
Comment 7 Andrew 2016-03-17 07:22:26 UTC Comment hidden (obsolete)
Comment 8 Andrew 2016-03-17 07:24:16 UTC Comment hidden (obsolete)
Comment 9 Andrew 2016-03-17 07:24:42 UTC Comment hidden (obsolete)
Comment 10 Andrew 2016-03-17 07:25:07 UTC Comment hidden (obsolete)
Comment 11 Andrew 2016-03-17 07:25:29 UTC Comment hidden (obsolete)
Comment 12 Andrew 2016-03-17 07:28:45 UTC Comment hidden (no-value)
Comment 13 Andrew 2016-03-17 07:37:14 UTC Comment hidden (off-topic)
Comment 14 Andrew 2016-03-17 07:37:52 UTC Comment hidden (off-topic)
Comment 15 Cor Nouws 2016-05-28 15:36:29 UTC
Created attachment 125353 [details]
screen shot showing LibreOffice daily20160525 and Word2010

Hi Andrew,

I confirm the problems with the attachment.
LibreOffice 3.3.0 shows the same as 
  https://bugs.documentfoundation.org/attachment.cgi?id=123648&action=edit
that is not perfect: note that there are two lines with numbers 1..

What I see is that there is a lot of direct formatting by the way, what makes interoperability harder. Especially since LibreOffice is a program on its own and not designed around showing files as Word ..
Having said that: there are indeed many professional developers that can be contacted to improve this.  See http://www.documentfoundation.org/gethelp/developers/
Comment 16 Cor Nouws 2016-05-28 15:43:07 UTC
first version showing numbering much worse than in 3.3.0 is (as far as I can see) 3.6.0.4

I do not set it to a regression, because in 3.3.0 it was not OK too...
Comment 17 Cor Nouws 2016-05-30 20:30:57 UTC
Created attachment 125401 [details]
Clean file from Word 2010 with ~ same contents

So for reference I created the 'same' file in Word 201o, but new. That opens perfect in LibreOffice.
This may help to find the odd stuff in the test file that does not open correct.
Comment 18 QA Administrators 2018-06-26 02:44:15 UTC Comment hidden (obsolete)
Comment 19 Timur 2019-09-06 09:52:45 UTC
Created attachment 153981 [details]
Test document compared MSO LO3.5  LO3.6 LO4.2 LO6.4+

Still repro in LO 6.4+, even if DOCX resaved in MSO. 
Interesting that OO and LO 3.5 used to open it fine. I'll mark regression, although it's not a single one, but multiple ones. Can be seen in attachment.
Comment 20 Timur 2019-09-06 09:56:14 UTC Comment hidden (obsolete)
Comment 21 Timur 2019-09-06 09:56:40 UTC Comment hidden (obsolete)
Comment 22 Gabor Kelemen (Collabora) 2019-09-17 12:34:15 UTC Comment hidden (obsolete)
Comment 23 Gabor Kelemen (Collabora) 2019-09-17 12:58:45 UTC Comment hidden (obsolete)
Comment 24 NISZ LibreOffice Team 2020-01-13 12:40:44 UTC
(In reply to Andrew from comment #5)
> Created attachment 123645 [details]
> Text document from MS Word
> 
> Numbering in LibreOffice working completely unusable and it is completely
> incompatible with MS Word. I present some attachments that illustrating just
> only one of problems.

For the record: this file is imported correctly since:

commit 1db6fb0f831e92ac3902af9c58e33f49ede5532b [log] 

author
Michael Stahl <Michael.Stahl@cib.de> Fri Sep 20 19:42:16 2019 +0200 

writerfilter: fix assert importing fdo77404-1.docx

https://gerrit.libreoffice.org/plugins/gitiles/core/+/1db6fb0f831e92ac3902af9c58e33f49ede5532b

But the originally reported problem of not being able to directly format the numbering is still valid.
Comment 25 Timur 2020-01-29 14:46:58 UTC
Created attachment 157500 [details]
Test document compared MSO 2013 LO 6.4

From LO 6.4, numbering is OK again.
FWIS, I can format some numbering ("test of numbering" and in the table).

I cannot format just this numbering, and I can't say why it's different from "test of numbering": 
"This paragraph written without numbering
    1. First with numbering
    2. Second with numbering
    3. Third with numbering
    4. Fourth with numbering"
Comment 26 Commit Notification 2021-11-29 09:55:20 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7b8ae6f90c37c18ff724c0751b5f73cca6ae02ac

tdf#97899 DOCX import: allow character formatting only of numbering

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 27 Commit Notification 2021-11-30 09:08:23 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/5d0f0d1a70a0b001be9db95d85f1d33a5f23f13f

tdf#97899 DOCX import: allow character formatting only of numbering

It will be available in 7.3.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 NISZ LibreOffice Team 2021-12-01 07:45:46 UTC
Verified in:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4ac9032163cf55c160145373e7c41741c9c339ca
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL