tdf#97899 DOCX import: fix the character formatting of the numbering

If the numbering didn't have direct character formatting,
then the CharStyleName property wasn't set, therefore we
couldn't format the numbers in Writer.

Change-Id: I6f2c5d6e0d63b15e9c28367181af1e9e083ae68d